--- a/index.html
+++ b/index.html
@@ -1023,6 +1023,10 @@ in <span class="gold">elNER-18</span></h3>
 							    <span>ORG</span>
 							</mark>
 							 . </div>
+						<div class="entities"  style="font-size: .55em;line-height: 2.5; direction: ltr">
+<mark class="entity" style="background: #bfe1d9;">Last week<span>DATE</span></mark>, Secretary of State <mark class="entity" style="background: #aa9cfc;">Mike Pompeo<span>PERSON</span></mark> met with <mark class="entity" style="background: #aa9cfc;">Lopez Obrador<span>PERSON</span></mark>, who said he wanted <mark class="entity" style="background: #e4e7d2;">n/a<span>CARDINAL</span></mark> a good relationship with the <mark class="entity" style="background: #feca74;">United States<span>GPE</span></mark> and that his partners would be involved in future <mark class="entity" style="background: #7aecec;">NAFTA<span>ORG</span></mark> talks.
+</div>
+						
 					</section>
 					<section>
 						<div class="entities"  style="font-size: .55em;line-height: 2.5; direction: ltr">Ο κ. 
@@ -1056,6 +1060,10 @@ in <span class="gold">elNER-18</span></h3>
 						<span>ORG</span>
 						</mark>
 						. </div>
+						
+						<div class="entities"  style="font-size: .55em;line-height: 2.5; direction: ltr">
+Mr. <mark class="entity" style="background: #aa9cfc;">Reglingr<span>PERSON</span></mark> stressed that the goal of aid programs and reforms in <mark class="entity" style="background: #feca74;">Greece<span>GPE</span></mark> over the past <mark class="entity" style="background: #bfe1d9;">eight years<span>DATE</span></mark> has been to create <mark class="entity" style="background: #e4e7d2;">n/a<span>CARDINAL</span></mark> a new basis for healthy and sustainable development, in the interest of both <mark class="entity" style="background: #c887fb;">Greek<span>NORP</span></mark> citizens and the <mark class="entity" style="background: #7aecec;">ESM<span>ORG</span></mark>.
+</div>
 					</section>
 					<section>
 						 <div class="entities" style="font-size: .55em;line-height: 2.5; direction: ltr">Από την έντυπη έκδοση 
@@ -1065,7 +1073,9 @@ in <span class="gold">elNER-18</span></h3>
 						</mark>
 						 μάχης έχουν πάρει οι παγωτοβιομηχανίες , διεκδικώντας μεγαλύτερο μερίδιο στην πίτα της κατανάλωσης , η οποία από την αρχή του έτους εμφανίζει σημαντικά βελτιωμένες επιδόσεις στο κανάλι των σούπερ μάρκετ , ενώ οι προβλέψεις για αυξημένο τουριστικό ρεύμα τη φετινή καλοκαιρινή σεζόν ενισχύουν περαιτέρω τη δυναμική της κατηγορίας του παγωτού . </div>
 					</section>
-
+        <div class="entities"  style="font-size: .55em;line-height: 2.5; direction: ltr">
+From the print edition of <mark class="entity" style="background: #7aecec;">Danae Alexaki dalex@naftemporiki.gr Ice cream companies have taken battle position<span>ORG</span></mark>, claiming a larger share in the consumption pie, which since the beginning of the year shows significantly improved performance in the supermarket channel, while the forecasts for increased touristic current this summer season further enhance the dynamics of the ice cream category.
+</div>
 				</section>
 
 				<section style="font-size: .6em">
