--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@ From the print edition of <mark class="entity" style="background: #7aecec;">Dana
 				<li>Presentation<br>
 	            <a href="https://nmpartzio.github.io/elner_slides">https://nmpartzio.github.io/elner_slides</a></li>
 				</ul>
-					<span class="greenyellow">THANK YOU!</span>
+					<h3 class="greenyellow">THANK YOU!</h3>
 				</section>
 
 			</div>
