--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@ From the print edition of <mark class="entity" style="background: #7aecec;">Dana
 				<li>Presentation<br>
 	            <a href="https://nmpartzio.github.io/elner_slides">https://nmpartzio.github.io/elner_slides</a></li>
 				</ul>
-					<h3 class="greenyellow">THANK YOU!</h3>
+					<h3>THANK YOU!</h3>
 				</section>
 
 			</div>
