--- a/index.html
+++ b/index.html
@@ -931,8 +931,9 @@ in <span class="gold">elNER-18</span></h3>
 					</canvas>
 					</section>
 					<section>
-						
-											<canvas class="fragment fade-out" data-fragment-index="0" data-chart="bar">
+					<h3>Best performance <span class="gold">elNER-4</span> dataset</h3>
+					<h4>for spaCy and biLSTM-CRF (metrics in %)</h4>
+					<canvas data-chart="bar">
 					<!--
 					{
 					 "data": {
@@ -970,6 +971,7 @@ in <span class="gold">elNER-18</span></h3>
 				</section>
 
 				<section>
+					<section>
 					<h3>Best performance <span class="gold">elNER-18</span> dataset</h3>
 					<h4>for spaCy and biLSTM-CRF (metrics in %)</h4>
 					<canvas class="stretch" data-chart="bar">
@@ -1026,6 +1028,45 @@ in <span class="gold">elNER-18</span></h3>
 					}
 					-->
 					</canvas>
+				</section>
+					<section>
+					<h3>Best performance <span class="gold">elNER-18</span> dataset</h3>
+					<h4>for spaCy and biLSTM-CRF (metrics in %)</h4>
+					<canvas data-chart="bar">
+					<!--
+					{
+					 "data": {
+					  "labels": ["Precision"," Recall"," F1"],
+					  "datasets":[
+					   {
+					    "data":[90.93,91.14,91.04],
+					    "label":"spaCy"
+					   },
+					   {
+					    "data":[91.65,92.45,92.05],
+					    "label":"biLSTM-CRF"
+					   }
+					  ]
+					 }, 
+					 "options": { 	"responsive": "true",
+					         		"title": {
+            							"display": "true",
+            							"text": "Model spaCy & biLSTM-CRF"
+        							}, 
+					 				"scales": {
+            							"yAxes": [{
+                							"ticks": {
+                    							"suggestedMin": "86",
+                    							"suggestedMax": "93"
+                							}
+            							}]
+        							}
+        						}
+					}
+					-->
+					</canvas>
+		
+					</section>
 				</section>
 
 				<section>
