--- a/index.html
+++ b/index.html
@@ -1151,9 +1151,9 @@ Mr. <mark class="entity" style="background: #aa9cfc;">Reglingr<span>PERSON</span
 						    Tης Δανάης Αλεξάκη dalex@naftemporiki.gr Θέση
 						    <span>ORG</span>
 						</mark>
-						 μάχης έχουν πάρει οι παγωτοβιομηχανίες , διεκδικώντας μεγαλύτερο μερίδιο στην πίτα της κατανάλωσης , η οποία από την αρχή του έτους εμφανίζει σημαντικά βελτιωμένες επιδόσεις στο κανάλι των σούπερ μάρκετ , ενώ οι προβλέψεις για αυξημένο τουριστικό ρεύμα τη φετινή καλοκαιρινή σεζόν ενισχύουν περαιτέρω τη δυναμική της κατηγορίας του παγωτού . </div>
+						 μάχης έχουν πάρει οι παγωτοβιομηχανίες , διεκδικώντας μεγαλύτερο μερίδιο στην πίτα της κατανάλωσης , η οποία από την αρχή του έτους εμφανίζει σημαντικά βελτιωμένες επιδόσεις στο κανάλι των σούπερ μάρκετ ... </div>
 					<div class="entities"  style="border-top: 10px solid white;font-size: .55em;line-height: 2.5; direction: ltr">
-From the print edition of <mark class="entity" style="background: #7aecec;">Danae Alexaki dalex@naftemporiki.gr Ice cream companies have taken battle position<span>ORG</span></mark>, claiming a larger share in the consumption pie, which since the beginning of the year shows significantly improved performance in the supermarket channel, while the forecasts for increased touristic current this summer season further enhance the dynamics of the ice cream category.
+From the print edition of <mark class="entity" style="background: #7aecec;">Danae Alexaki dalex@naftemporiki.gr Ice cream companies have taken battle position<span>ORG</span></mark>, claiming a larger share in the consumption pie, which since the beginning of the year shows significantly improved performance in the supermarket channel ...
 </div>
 					</section>
         
