--- a/index.html
+++ b/index.html
@@ -1142,7 +1142,7 @@ in <span class="gold">elNER-18</span></h3>
 						. </div>
 						
 						<div class="entities"  style="border-top: 10px solid white;font-size: .55em;line-height: 2.5; direction: ltr">
-Mr. <mark class="entity" style="background: #aa9cfc;">Reglingr<span>PERSON</span></mark> stressed that the goal of aid programs and reforms in <mark class="entity" style="background: #feca74;">Greece<span>GPE</span></mark> over the past <mark class="entity" style="background: #bfe1d9;">eight years<span>DATE</span></mark> has been to create <mark class="entity" style="background: #e4e7d2;">n/a<span>CARDINAL</span></mark> a new basis for healthy and sustainable development, in the interest of both <mark class="entity" style="background: #c887fb;">Greek<span>NORP</span></mark> citizens and the <mark class="entity" style="background: #7aecec;">ESM<span>ORG</span></mark>.
+Mr. <mark class="entity" style="background: #aa9cfc;">Regling<span>PERSON</span></mark> stressed that the goal of aid programs and reforms in <mark class="entity" style="background: #feca74;">Greece<span>GPE</span></mark> over the past <mark class="entity" style="background: #bfe1d9;">eight years<span>DATE</span></mark> has been to create <mark class="entity" style="background: #e4e7d2;">n/a<span>CARDINAL</span></mark> a new basis for healthy and sustainable development, in the interest of both <mark class="entity" style="background: #c887fb;">Greek<span>NORP</span></mark> citizens and the <mark class="entity" style="background: #7aecec;">ESM<span>ORG</span></mark>.
 </div>
 					</section>
 					<section>
